test/test-files/analyzer/arrays/error-array-size-attached/exception.out
Semantic error in : ./test-files/analyzer/arrays/error-array-size-attached/source.spice:2:5:
Array size invalid: The declaration of an array type must have a size attached

double[] doubleArray = { 1.1
^^^^^^^^